Added a few more index entries

--- a/tex/p015.tex
+++ b/tex/p015.tex
@@ -107,7 +107,7 @@
 \vs p015 6:12 \pc \bibemph{Minor Space Bodies.} The meteors and other small particles of matter circulating and evolving in space constitute an enormous aggregate of energy and material substance.
 \vs p015 6:13 Many comets are unestablished wild offspring of the solar mother wheels, which are being gradually brought under control of the central governing sun. Comets also have numerous other origins. A comet’s tail points away from the attracting body or sun because of the electrical reaction of its highly expanded gases and because of the actual pressure of light and other energies emanating from the sun. This phenomenon constitutes one of the positive proofs of the reality of light and its associated energies; it demonstrates that light has weight. Light is a real substance, not simply waves of hypothetical ether.
 \vs p015 6:14 \pc \bibemph{The Planets.} These are the larger aggregations of matter which follow an orbit around a sun or some other space body; they range in size from planetesimals to enormous gaseous, liquid, or solid spheres. The cold worlds which have been built up by the assemblage of floating space material, when they happen to be in proper relation to a near\hyp{}by sun, are the more ideal planets to harbour intelligent inhabitants. The dead suns are not, as a rule, suited to life; they are usually too far away from a living, blazing sun, and further, they are altogether too massive; gravity is tremendous at the surface.
-\vs p015 6:15 In your superuniverse not one cool planet in 40 is habitable by beings of your order. And, of course, the superheated suns and the frigid outlying worlds are unfit to harbour higher life. In your solar system only three planets\fnst{The other two being Mars and Venus, according to A.S.\,Eddington, ``The Nature of the Physical World'', p.\,170, 1929.} are at present suited to harbour life. Urantia, in size, density, and location, is in many respects ideal for human habitation.
+\vs p015 6:15 In your superuniverse not one cool planet in 40 is habitable by beings of your order. And, of course, the superheated suns and the frigid outlying worlds are unfit to harbour higher life. In your solar system only three planets\fnst{The other two being Mars\index{Planets!Mars} and Venus,\index{Planets!Venus} according to A.S.\,Eddington, ``The Nature of the Physical World'', p.\,170, 1929.} are at present suited to harbour life. Urantia, in size, density, and location, is in many respects ideal for human habitation.
 \vs p015 6:16 The laws of physical\hyp{}energy behaviour are basically universal, but local influences have much to do with the physical conditions which prevail on individual planets and in local systems. An almost endless variety of creature life and other living manifestations characterizes the countless worlds of space. There are, however, certain points of similarity in a group of worlds associated in a given system, while there also is a universe pattern of intelligent life. There are physical relationships among those planetary systems which belong to the same physical circuit, and which closely follow each other in the endless swing around the circle of universes.
 \usection{The Architectural Spheres}
 \vs p015 7:1 While each superuniverse government presides near the centre of the evolutionary universes of its space segment, it occupies a world made to order and is peopled by accredited personalities. These headquarters worlds are architectural spheres, space bodies specifically constructed for their special purpose. While sharing the light of near\hyp{}by suns, these spheres are independently lighted and heated. Each has a sun which gives forth light without heat, like the satellites of Paradise, while each is supplied with heat by the circulation of certain energy currents near the surface of the sphere. These headquarters worlds belong to one of the greater systems situated near the astronomical centre of their respective superuniverses.
@@ -197,7 +197,7 @@
 \vs p015 14:2 Orvonton, the seventh superuniverse, the one to which your local universe belongs, is known chiefly because of its tremendous and lavish bestowal of merciful ministry to the mortals of the realms. It is renowned for the manner in which justice prevails as tempered by mercy and power rules as conditioned by patience, while the sacrifices of time are freely made to secure the stabilization of eternity. Orvonton is a universe demonstration of love and mercy.
 \vs p015 14:3 It is, however, very difficult to describe our conception of the true nature of the evolutionary purpose which is unfolding in Orvonton, but it may be suggested by saying that in this supercreation we feel that the six unique purposes of cosmic evolution as manifested in the six associated supercreations are here being interassociated into a meaning\hyp{}of\hyp{}the\hyp{}whole; and it is for this reason that we have sometimes conjectured that the evolved and finished personalization of God the Supreme will in the remote future and from Uversa rule the perfected seven superuniverses in all the experiential majesty of his then attained almighty sovereign power.
 \vs p015 14:4 As Orvonton is unique in nature and individual in destiny, so also is each of its six associated superuniverses. A great deal that is going on in Orvonton is not, however, revealed to you, and of these unrevealed features of Orvonton life, many are to find most complete expression in some other superuniverse. The seven purposes of superuniverse evolution are operative throughout all seven superuniverses, but each supercreation will give fullest expression to only one of these purposes. To understand more about these superuniverse purposes, much that you do not understand would have to be revealed, and even then you would comprehend but little. This entire narrative presents only a fleeting glimpse of the immense creation of which your world and local system are a part.
-\vs p015 14:5 \pc Your world is called Urantia, and it is number 606 in the planetary group, or system, of Satania. This system has at present 619 inhabited worlds, and more than 200 additional planets are evolving favourably toward becoming inhabited worlds at some future time.
+\vs p015 14:5 \pc Your world is called Urantia, and it is number 606\index{606 of Satania|see{Urantia}} in the planetary group, or system, of Satania. This system has at present 619 inhabited worlds, and more than 200 additional planets are evolving favourably toward becoming inhabited worlds at some future time.
 \vs p015 14:6 Satania has a headquarters world called Jerusem, and it is system number 24 in the constellation of Norlatiadek. Your constellation, Norlatiadek, consists of 100 local systems and has a headquarters world called Edentia. Norlatiadek is number 70 in the universe of Nebadon. The local universe of Nebadon consists of 100 constellations and has a capital known as Salvington. The universe of Nebadon is number 84 in the minor sector of Ensa.
 \vs p015 14:7 The minor sector of Ensa consists of 100 local universes and has a capital called Uminor the 3\ts{rd}. This minor sector is number 3 in the major sector of Splandon. Splandon consists of 100 minor sectors and has a headquarters world called Umajor the 5\ts{th}. It is the 5\ts{th} major sector of the superuniverse of Orvonton, the 7\ts{th} segment of the grand universe. Thus you can locate your planet in the scheme of the organization and administration of the universe of universes.
 \vs p015 14:8 The grand universe number of your world, Urantia, is 5,342,482,337,666\fnst{How are the 7 celestial coordinates of our planet just given (7, 5, 3, 84, 70, 24, 606) encoded in the registry number? It is possible that the \bibemph{decimal} status is included as well and, together with the planet's number 606, it is represented in the final digits 666, see the note on \bibref[58:1.1]{p058 1:1}.}. That is the registry number on Uversa and on Paradise, your number in the catalogue of the inhabited worlds. I know the physical\hyp{}sphere registry number, but it is of such an extraordinary size that it is of little practical significance to the mortal mind.
