--- a/tex/p088.tex
+++ b/tex/p088.tex
@@ -14,7 +14,7 @@
 \vs p088 1:3 Tree fetishes were a later development, but among some tribes the persistence of nature worship led to belief in charms indwelt by some sort of nature spirit. When plants and fruits became fetishes, they were taboo as food. The apple was among the first to fall into this category; it was never eaten by the Levantine peoples.
 \vs p088 1:4 If an animal ate human flesh, it became a fetish. In this way the dog came to be the sacred animal of the Parsees. If the fetish is an animal and the ghost is permanently resident therein, then fetishism may impinge on reincarnation. In many ways the savages envied the animals; they did not feel superior to them and were often named after their favourite beasts.
 \vs p088 1:5 When animals became fetishes, there ensued the taboos on eating the flesh of the fetish animal. Apes and monkeys, because of resemblance to man, early became fetish animals; later, snakes, birds, and swine were also similarly regarded. At one time the cow was a fetish, the milk being taboo while the excreta were highly esteemed. The serpent was revered in Palestine, especially by the Phoenicians, who, along with the Jews, considered it to be the mouthpiece of evil spirits. Even many moderns believe in the charm powers of reptiles. From Arabia on through India to the snake dance of the Moqui tribe of red men the serpent has been revered.
-\vs p088 1:6 Certain days of the week were fetishes. For ages Friday has been regarded as an unlucky day and the number 13 as an evil numeral. The lucky numbers 3 and 7 came from later revelations; 4 was the lucky number of primitive man and was derived from the early recognition of the four points of the compass. It was held unlucky to count cattle or other possessions; the ancients always opposed the taking of a census, “numbering the people.”
+\vs p088 1:6 Certain days of the week were fetishes. For ages Friday has been regarded as an unlucky day and the number 13\index{13!regarded by ancients as evil} as an evil numeral. The lucky numbers 3 and 7 came from later revelations; 4 was the lucky number of primitive man and was derived from the early recognition of the four points of the compass. It was held unlucky to count cattle or other possessions; the ancients always opposed the taking of a census, “numbering the people.”
 \vs p088 1:7 Primitive man did not make an undue fetish out of sex; the reproductive function received only a limited amount of attention. The savage was natural minded, not obscene or prurient.
 \vs p088 1:8 Saliva was a potent fetish; devils could be driven out by spitting on a person. For an elder or superior to spit on one was the highest compliment. Parts of the human body were looked upon as potential fetishes, particularly the hair and nails. The long\hyp{}growing fingernails of the chiefs were highly prized, and the trimmings thereof were a powerful fetish. Belief in skull fetishes accounts for much of later\hyp{}day head\hyp{}hunting. The umbilical cord was a highly prized fetish; even today it is so regarded in Africa. Mankind’s first toy was a preserved umbilical cord. Set with pearls, as was often done, it was man’s first necklace.
 \vs p088 1:9 Hunchbacked and crippled children were regarded as fetishes; lunatics were believed to be moon\hyp{}struck. Primitive man could not distinguish between genius and insanity; idiots were either beaten to death or revered as fetish personalities. Hysteria increasingly confirmed the popular belief in witchcraft; epileptics often were priests and medicine men. Drunkenness was looked upon as a form of spirit possession; when a savage went on a spree, he put a leaf in his hair for the purpose of disavowing responsibility for his acts. Poisons and intoxicants became fetishes; they were deemed to be possessed.
