--- a/tex/p122.tex
+++ b/tex/p122.tex
@@ -68,7 +68,7 @@
 \vs p122 8:4 The second day after the birth of Jesus, Mary sent word to Elizabeth that her child had come and received word in return inviting Joseph up to Jerusalem to talk over all their affairs with Zacharias. The following week Joseph went to Jerusalem to confer with Zacharias. Both Zacharias and Elizabeth had become possessed with the sincere conviction that Jesus was indeed to become the Jewish deliverer, the Messiah, and that their son John was to be his chief of aides, his right\hyp{}hand man of destiny. And since Mary held these same ideas, it was not difficult to prevail upon Joseph to remain in Bethlehem, the City of David, so that Jesus might grow up to become the successor of David on the throne of all Israel. Accordingly, they remained in Bethlehem more than a year, Joseph meantime working some at his carpenter’s trade.
 \vs p122 8:5 \pc At the noontide birth of Jesus the seraphim of Urantia, assembled under their directors, did sing anthems of glory over the Bethlehem manger, but these utterances of praise were not heard by human ears. No shepherds nor any other mortal creatures came to pay homage to the babe of Bethlehem until the day of the arrival of certain priests from Ur, who were sent down from Jerusalem by Zacharias.
 \vs p122 8:6 These priests from Mesopotamia had been told sometime before by a strange religious teacher of their country that he had had a dream in which he was informed that “the light of life” was about to appear on earth as a babe and among the Jews. And thither went these three teachers looking for this “light of life.” After many weeks of futile search in Jerusalem, they were about to return to Ur when Zacharias met them and disclosed his belief that Jesus was the object of their quest and sent them on to Bethlehem, where they found the babe and left their gifts with Mary, his earth mother. The babe was almost three weeks old at the time of their visit.
-\vs p122 8:7 These wise men saw no star to guide them to Bethlehem. The beautiful legend of the star of Bethlehem originated in this way: Jesus was born August 21 at noon, 7\,B.C. On May 29, 7\,B.C., there occurred an extraordinary conjunction of Jupiter and Saturn in the constellation of Pisces\fnst{Indeed, there was such a triple conjunction in 7\,B.C. and this fact was known back in 1614 to Johannes Kepler, who was the first scientist to link the ``Star of Bethlehem'' to this astronomical event. I have calculated (using the program \bibemph{Stellarium} under Linux) the gap between the planets to be around one degree. The apparent diameter of the Moon is just over half a degree, so the planets were two Moon's diameters apart.}. And it is a remarkable astronomic fact that similar conjunctions occurred on September 29 and December 5 of the same year. Upon the basis of these extraordinary but wholly natural events the well\hyp{}meaning zealots of the succeeding generation constructed the appealing legend of the star of Bethlehem and the adoring Magi led thereby to the manger, where they beheld and worshipped the newborn babe. Oriental and near\hyp{}Oriental minds delight in fairy stories, and they are continually spinning such beautiful myths about the lives of their religious leaders and political heroes. In the absence of printing, when most human knowledge was passed by word of mouth from one generation to another, it was very easy for myths to become traditions and for traditions eventually to become accepted as facts.
+\vs p122 8:7 These wise men saw no star to guide them to Bethlehem. The beautiful legend of the star of Bethlehem originated in this way: Jesus was born August 21 at noon, 7\,B.C. On May 29, 7\,B.C., there occurred an extraordinary conjunction of Jupiter\index{Planets!Jupiter} and Saturn\index{Planets!Jupiter} in the constellation of Pisces\index{Constellations!Pisces}\fnst{Indeed, there was such a triple conjunction in 7\,B.C. and this fact was known back in 1614 to Johannes Kepler,\index{Kepler!Johannes Kepler|textbf} who was the first scientist to link the ``Star of Bethlehem'' to this astronomical event. I have calculated (using the program \bibemph{Stellarium} under Linux) the gap between the planets to be around one degree. The apparent diameter of the Moon is just over half a degree, so the planets were two Moon's diameters apart.}. And it is a remarkable astronomic fact that similar conjunctions occurred on September 29 and December 5 of the same year. Upon the basis of these extraordinary but wholly natural events the well\hyp{}meaning zealots of the succeeding generation constructed the appealing legend of the star of Bethlehem and the adoring Magi led thereby to the manger, where they beheld and worshipped the newborn babe. Oriental and near\hyp{}Oriental minds delight in fairy stories, and they are continually spinning such beautiful myths about the lives of their religious leaders and political heroes. In the absence of printing, when most human knowledge was passed by word of mouth from one generation to another, it was very easy for myths to become traditions and for traditions eventually to become accepted as facts.
 \usection{The Presentation in the Temple}
 \vs p122 9:1 Moses had taught the Jews that every first\hyp{}born son belonged to the Lord, and that, in lieu of his sacrifice as was the custom among the heathen nations, such a son might live provided his parents would redeem him by the payment of five shekels to any authorized priest. There was also a Mosaic ordinance which directed that a mother, after the passing of a certain period of time, should present herself (or have someone make the proper sacrifice for her) at the temple for purification. It was customary to perform both of these ceremonies at the same time. Accordingly, Joseph and Mary went up to the temple at Jerusalem in person to present Jesus to the priests and effect his redemption and also to make the proper sacrifice to ensure Mary’s ceremonial purification from the alleged uncleanness of childbirth.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=0.8\columnwidth]{images/Presentation.jpg}\caption{Presentation In The Temple by William Hole}\end{figure}}
 \vs p122 9:2 \pc There lingered constantly about the courts of the temple two remarkable characters, Simeon a singer and Anna a poetess. Simeon was a Judean, but Anna was a Galilean. This couple were frequently in each other’s company, and both were intimates of the priest Zacharias, who had confided the secret of John and Jesus to them. Both Simeon and Anna longed for the coming of the Messiah, and their confidence in Zacharias led them to believe that Jesus was the expected deliverer of the Jewish people.
