--- a/tex/p046.tex
+++ b/tex/p046.tex
@@ -11,7 +11,7 @@
 \vs p046 0:1 Jerusem, the headquarters of Satania, is an average capital of a local system, and aside from numerous irregularities occasioned by the Lucifer rebellion and the bestowal of Michael on Urantia, it is typical of similar spheres. Your local system has passed through some stormy experiences, but it is at present being administered most efficiently, and as the ages pass, the results of disharmony are being slowly but surely eradicated. Order and good will are being restored, and the conditions on Jerusem are more and more approaching the heavenly status of your traditions, for the system headquarters is truly the heaven visualized by the majority of XX century religious believers.
 \usection{Physical Aspects of Jerusem}
 \vs p046 1:1 Jerusem is divided into 1,000 latitudinal sectors and 10,000 longitudinal zones. The sphere has 7 major capitals and 70 minor administrative centres. The 7 sectional capitals are concerned with diverse activities, and the System Sovereign is present in each at least once a year.
-\vs p046 1:2 \pc The standard mile of Jerusem is equivalent to about 11 Urantia km\index{Measures of Distance, etc.!Measures of Distance!Jerusem mile $\approx$ 11\,km}. The standard weight, the “gradant,”\index{Measures of Distance, etc.!Measures of Mass!gradant $\approx$ 283 grams} is built up through the decimal system from the mature ultimaton\fnst{This suggests that there is no need for the concept of \bibemph{amount of substance} or the equivalent of our Avogadro's number on Jerusem. It should be recalled that on Urantia the concept of the ``amount of substance'' exists because the unit of mass is not defined as a multiple of some elementary such unit, unlike the metre and second. And the accuracy with which the mass can be measured differs from that of the number of structural elements (electrons, ions, molecules, atoms etc). But on Jerusem, the mass is defined in the same way as our metre and second, i.e. as multiple of an elementary unit.} and represents almost exactly 283 grams\fnst{Thus the mass of the mature ultimaton can be written as $2.8349523125 \times 10^{-N}$\,kg, where $N$ is a natural number. I think that $N=8$, i.e. ultimaton has the mass close to the value of \bibemph{Planck mass}.} of your weight. The Satania day equals 3 days of Urantia time, less 1 hour, 4 minutes, and 15 seconds,\index{Measures of Distance, etc.!Measures of Time!Satania day $=$ 254637\,s $\approx$ 2\,d 22\,h 43\,m 57\,s.}\fnst{Assuming the length of \bibemph{sidereal} day to be 86164.0905\,s gives the length of Satania day of 254637.2715\,s or 2 days 22 hours 43 minutes and 57 seconds.} that being the time of the axial revolution of Jerusem. The system year consists of 100 Jerusem days. The time of the system is broadcast by the master chronoldeks.
+\vs p046 1:2 \pc The standard mile of Jerusem is equivalent to about 11 Urantia km\index{Measures of distance, etc.!Measures of distance!Jerusem mile $\approx$ 11\,km}. The standard weight, the “gradant,”\index{Measures of distance, etc.!Measures of mass!gradant $\approx$ 283 grams} is built up through the decimal system from the mature ultimaton\fnst{This suggests that there is no need for the concept of \bibemph{amount of substance} or the equivalent of our Avogadro's number on Jerusem. It should be recalled that on Urantia the concept of the ``amount of substance'' exists because the unit of mass is not defined as a multiple of some elementary such unit, unlike the metre and second. And the accuracy with which the mass can be measured differs from that of the number of structural elements (electrons, ions, molecules, atoms etc). But on Jerusem, the mass is defined in the same way as our metre and second, i.e. as multiple of an elementary unit.} and represents almost exactly 283 grams\fnst{Thus the mass of the mature ultimaton can be written as $2.8349523125 \times 10^{-N}$\,kg, where $N$ is a natural number. I think that $N=8$, i.e. ultimaton has the mass close to the value of \bibemph{Planck mass}.} of your weight. The Satania day equals 3 days of Urantia time, less 1 hour, 4 minutes, and 15 seconds,\index{Measures of distance, etc.!Measures of time!Satania day $=$ 254637\,s $\approx$ 2\,d 22\,h 43\,m 57\,s.}\fnst{Assuming the length of \bibemph{sidereal} day to be 86164.0905\,s gives the length of Satania day of 254637.2715\,s or 2 days 22 hours 43 minutes and 57 seconds.} that being the time of the axial revolution of Jerusem. The system year consists of 100 Jerusem days. The time of the system is broadcast by the master chronoldeks.
 \vs p046 1:3 \pc The energy of Jerusem is superbly controlled and circulates about the sphere in the zone channels, which are directly fed from the energy charges of space and expertly administered by the Master Physical Controllers. The natural resistance to the passage of these energies through the physical channels of conduction yields the heat required for the production of the equable temperature of Jerusem. The full\hyp{}light temperature is maintained at about 21\,°C, while during the period of light recession it falls to a little lower than 10\,°C.
 \vs p046 1:4 \pc The lighting system of Jerusem should not be so difficult for you to comprehend. There are no days and nights, no seasons of heat and cold. The power transformers maintain 100,000 centres from which rarefied energies are projected upward through the planetary atmosphere, undergoing certain changes, until they reach the electric air\hyp{}ceiling of the sphere; and then these energies are reflected back and down as a gentle, sifting, and even light of about the intensity of Urantia sunlight when the sun is shining overhead at 10:00.
 \vs p046 1:5 Under such conditions of lighting, the light rays do not seem to come from one place; they just sift out of the sky, emanating equally from all space directions. This light is very similar to natural sunlight except that it contains very much less heat. Thus it will be recognized that such headquarters worlds are not luminous in space; if Jerusem were very near Urantia, it would not be visible.
