--- a/urantia-study-edition.tex
+++ b/urantia-study-edition.tex
@@ -221,6 +221,77 @@
 \include{tex/p195}
 \include{tex/p196}
 \tunemarkuptwo{noquiz}{}{\include{tex/quiz}\pagestyle{fancy}}
+\tunemarkup{bible}{%
+\switchtobible
+\bibpart{The Books of the Old Testament}{Old Testament}{OT}
+\include{tex/Gen}
+\include{tex/Exo}
+\include{tex/Lev}
+\include{tex/Num}
+\include{tex/Deu}
+\include{tex/Jos}
+\include{tex/Jdg}
+\include{tex/Rut}
+\include{tex/1Sa}
+\include{tex/2Sa}
+\include{tex/1Ki}
+\include{tex/2Ki}
+\include{tex/1Ch}
+\include{tex/2Ch}
+\include{tex/Ezr}
+\include{tex/Neh}
+\include{tex/Est}
+\include{tex/Job}
+\include{tex/Psa}
+\include{tex/Pro}
+\include{tex/Ecc}
+\include{tex/Sol}
+\include{tex/Isa}
+\include{tex/Jer}
+\include{tex/Lam}
+\include{tex/Eze}
+\include{tex/Dan}
+\include{tex/Hos}
+\include{tex/Joe}
+\include{tex/Amo}
+\include{tex/Oba}
+\include{tex/Jon}
+\include{tex/Mic}
+\include{tex/Nah}
+\include{tex/Hab}
+\include{tex/Zep}
+\include{tex/Hag}
+\include{tex/Zec}
+\include{tex/Mal}
+\bibpart{The Books of the New Testament}{New Testament}{NT}
+\include{tex/Mat}
+\include{tex/Mar}
+\include{tex/Luk}
+\include{tex/Joh}
+\include{tex/Act}
+\include{tex/Rom}
+\include{tex/1Co}
+\include{tex/2Co}
+\include{tex/Gal}
+\include{tex/Eph}
+\include{tex/Phi}
+\include{tex/Col}
+\include{tex/1Th}
+\include{tex/2Th}
+\include{tex/1Ti}
+\include{tex/2Ti}
+\include{tex/Tit}
+\include{tex/Phm}
+\include{tex/Heb}
+\include{tex/Jam}
+\include{tex/1Pe}
+\include{tex/2Pe}
+\include{tex/1Jo}
+\include{tex/2Jo}
+\include{tex/3Jo}
+\include{tex/Jud}
+\include{tex/Rev}
+}
 \normalsize
 \iftotalfigures
   \clp\fancyhead[C]{\bibheadfont LIST OF FIGURES}\bibpdfbookmark{LIST OF FIGURES}{fig}%
