Adjust TOC for 5" PDF build

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -683,7 +683,6 @@
 \def\phoenixscale{0.16}
 \tolerance=9999
 \newcommand{\authorfont}{\authorfontfamily\fontsize{19}{9}\bfseries\itshape}%
-\newcommand{\bibtocsuperheadfont}{\fontsize{13}{13}\selectfont}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{6.9}{6.9}\selectfont}
 \newcommand{\bibheadpapersize}{\fontsize{8}{8}\selectfont}
 \renewcommand{\bibheadchapsize}{\fontsize{8}{8}\selectfont}
@@ -701,8 +700,9 @@
 \newcommand{\parttitlefontsize}{\parttitlefont\Large}
 \newcommand{\bibbookend}{\fontsize{18}{20}\selectfont}
 \newcommand{\urantiamainfontsize}{18/20}
-\renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2}\fontsize{13}{15}\bfseries}
-\renewcommand{\bibtocfont}{\fontsize{10.5}{17}\selectfont}
+\newcommand{\bibtocsuperheadfont}{\fontsize{13}{13}\selectfont}
+\renewcommand{\bibtocheadfont}{\fontsize{10}{10}\selectfont}
+\renewcommand{\bibtocfont}{\fontsize{6.8}{9}\selectfont}
 \newcommand{\minitocfontsize}{\headingfont\fontsize{7}{7}\selectfont}
 \renewcommand{\footnotesize}{\fontsize{13}{15}\selectfont}
 }
