Update Introduction and the title page

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -55,10 +55,13 @@ Last but not least I am deeply grateful to Troy R.~Bishop, whom I am honoured to
 
 \tunemarkuptwo{noquiz}{}{%
 This PDF file also includes the interactive quiz (\totalcurqs\ questions in total) called \bibemph{The Cosmic Citizenship Quiz}.
-To use the quiz simply click on the symbol \quizsymbol\ at the end of any Paper or click on the title
-of any Paper in the text section.
+To use the quiz simply click on the symbol \quizsymbol\ at the end of any Paper
 Clicking on the Paper's title in the quiz section will return you back to that Paper in the text section.
 }
+
+\tunemarkuptwo{bible}{%
+The full text of the Bible (King James Version) is also included in this PDF file.
+}{}
 
 \begin{flushleft}
 \itshape
