--- a/tex/title.tex
+++ b/tex/title.tex
@@ -21,7 +21,10 @@
 \subsubtitlefontsize
 The Revised Text in British English\tunemarkuptwo{nofnt}{\\[2ex]}{%
 ,\\
-With \totalnfnsts\ Notes \&\ \totalfigures\ Illustrations\\[2ex]
+With \totalnfnsts\ Notes, Index \&\ \totalfigures\ Illustrations\\
+\tunemarkup{bible}{%
+As well as the full text of the KJV Bible\\[2ex]
+}{}
 }
 Edited by Tigran Aivazian\\[2ex]
 \tunemarkuptwo{noquiz}{}{With Interactive Cosmic Citizenship Quiz\\Of \totalcurqs\ Questions\\}
