Make public build default

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -37,7 +37,7 @@
 \tunemarkuptag{afterpartnewpage}
 
 % comment out for public PDF build
-\tunemarkuptag{private}
+%\tunemarkuptag{private}
 
 % comment out to disable pictures
 \tunemarkuptag{pictures}
